fix(text-area): add gap to resize sample (#971)

--- a/samples/inputs/textarea/resize/src/index.css
+++ b/samples/inputs/textarea/resize/src/index.css
@@ -1,2 +1,8 @@
 /* shared styles are loaded from: */
 /* https://static.infragistics.com/xplatform/css/samples */
+
+.container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
